# advent_of_ocaml

./: .gitignore  LICENSE  README.md  advent_of_ocaml.opam  advent_of_ocaml.opam.locked  dune-project  fetch-input.sh  init-solution.sh  run.sh
template/: main.txt
util/: arrays.ml  debugging.ml  dune  heap.ml  lists.ml  math.ml  parsing.ml  printing.ml  sequences.ml  tuples.ml  util.ml
